Just a little spacing fix

--- a/src/components/status.css
+++ b/src/components/status.css
@@ -1695,7 +1695,7 @@ a.card:is(:hover, :focus):visited {
 }
 .poll-label input:is([type='radio'], [type='checkbox']) {
   flex-shrink: 0;
-  margin: 3px;
+  margin: 0 3px;
   min-height: 0.9em;
 }
 .poll-option-votes {
